--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Stephen Brien",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jade": "^1.11.0"
   }
