--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Stephen Brien",
+  "author": "Stephen Brien, Cristian Paltinean, Adam Byrne, Ronan Crabtree",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
